--- a/client/templates/home/index.html
+++ b/client/templates/home/index.html
@@ -6,9 +6,9 @@
   <div class="row">
     <div class="col-md-12">
       <div class="jumbotron">
-        <h1>Welcome to The Rocket Shop</h1>
+        <h1>Welcome to The Pizza app</h1>
         <p class="lead">
-          To Mars With You!
+          Tasty pizza just for you here and now!
         </p>
       </div>
     </div>
