--- a/client/templates/_partials/nav.html
+++ b/client/templates/_partials/nav.html
@@ -1,4 +1,4 @@
- <template name="nav"><nav class="navbar navbar-inverse navbar-fixed-top">
+ <template name="nav"><!-- <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -7,11 +7,21 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{pathFor 'homeIndex'}}">My Shop</a>
+          <a class="navbar-brand" href="{{pathFor 'homeIndex'}}">Pizza App</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="{{pathFor 'homeIndex'}}">Home</a></li>
+            <li><a href="{{pathFor 'customerShow'}}">Customers</a></li>
+            <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Groups <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            
+              <li><a href="{{pathFor 'groupsShow'}}">Groups</a></li>
+              <li><a href="{{pathFor 'addGroup'}}">Add Group</a></li>
+            
+          </ul>
+        </li>
             <li><a href="{{pathFor 'homeAbout'}}">About</a></li>
             <li><a href="{{pathFor 'homeContact'}}">Contact</a></li>
             <li class="dropdown">
@@ -29,9 +39,50 @@
             {{/if}}
           </li>
           <ul class="nav navbar-nav navbar-right">
-      {{> loginButtons}} <!-- here -->
+      {{> loginButtons}} 
     </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
-    </nav>
+    </nav> -->
+    <div class="navbar-wrapper">
+    <div class="container-fluid">
+        <nav class="navbar navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="{{pathFor 'homeIndex'}}">Pizza App</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="{{pathFor 'homeIndex'}}" class="">Home</a></li>
+                        
+                        <li><a href="{{pathFor 'customerShow'}}">Customers</a></li>
+                        <li class=" dropdown"><a href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Group <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{pathFor 'groupsShow'}}">Groups</a></li>
+              <li><a href="{{pathFor 'addGroup'}}">Add Group</a></li>
+                            </ul>
+                        </li>
+                        <li class=" dropdown"><a href="#" class="dropdown-toggle active" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Vendors <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+            {{#each vendors}}
+              <li><a href="{{pathFor "vendorsShow"}}">{{name}}</a></li>
+            {{/each}}
+          </ul>
+                        </li>
+                        
+                    </ul>
+                    <ul class="nav navbar-nav pull-right extra-pad">
+                        {{> loginButtons}} 
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+</div>
     </template>
